<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".view.login.LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/image_profile"
            android:layout_width="177dp"
            android:layout_height="177dp"
            android:scaleType="centerCrop"
            android:clipToOutline="true"
            tools:src="@tools:sample/avatars"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="30dp"
            app:srcCompat="@drawable/logo"/>

        <TextView
            android:id="@+id/profile_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textColor="@color/black"
            android:fontFamily="@font/poppins2"
            android:textSize="25sp"
            android:textStyle="bold"
            android:paddingLeft="30dp"
            app:layout_constraintTop_toBottomOf="@id/image_profile" />

        <TextView
            android:id="@+id/nameTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/everin"
            android:textColor="@color/black"
            android:fontFamily="@font/poppins2"
            android:textSize="20sp"
            android:padding="8dp"
            android:paddingLeft="15dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            app:layout_constraintTop_toBottomOf="@id/profile_name"
            android:background="@drawable/rounded_background_lightgreen"/>

        <TextView
            android:id="@+id/profile_height"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/height"
            android:textColor="@color/black"
            android:fontFamily="@font/poppins2"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_marginTop="5dp"
            android:paddingLeft="30dp"
            app:layout_constraintTop_toBottomOf="@id/nameTextView" />

        <TextView
            android:id="@+id/number_height"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="170"
            android:textColor="@color/black"
            android:fontFamily="@font/poppins2"
            android:textSize="20sp"
            android:padding="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            app:layout_constraintTop_toBottomOf="@id/profile_height"
            android:background="@drawable/rounded_background_lightgreen"/>

        <TextView
            android:id="@+id/profile_weight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/weight"
            android:textColor="@color/black"
            android:fontFamily="@font/poppins2"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_marginTop="5dp"

            android:paddingLeft="30dp"
            app:layout_constraintTop_toBottomOf="@id/number_height" />

        <TextView
            android:id="@+id/number_weight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="49"
            android:textColor="@color/black"
            android:fontFamily="@font/poppins2"
            android:textSize="20sp"
            android:padding="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            app:layout_constraintTop_toBottomOf="@id/profile_weight"
            android:background="@drawable/rounded_background_lightgreen"/>

        <TextView
            android:id="@+id/profile_age"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/age"
            android:textColor="@color/black"
            android:fontFamily="@font/poppins2"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_marginTop="5dp"
            android:paddingLeft="30dp"
            app:layout_constraintTop_toBottomOf="@id/number_weight" />

        <TextView
            android:id="@+id/number_age"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="20"
            android:textColor="@color/black"
            android:fontFamily="@font/poppins2"
            android:textSize="20sp"
            android:padding="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            app:layout_constraintTop_toBottomOf="@id/profile_age"
            android:background="@drawable/rounded_background_lightgreen"/>

        <TextView
            android:id="@+id/profile_gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gender"
            android:textColor="@color/black"
            android:fontFamily="@font/poppins2"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_marginTop="5dp"
            android:paddingLeft="30dp"
            app:layout_constraintTop_toBottomOf="@id/number_age" />

        <TextView
            android:id="@+id/gender_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/man"
            android:textColor="@color/black"
            android:fontFamily="@font/poppins2"
            android:textSize="20sp"
            android:padding="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            app:layout_constraintTop_toBottomOf="@id/profile_gender"
            android:background="@drawable/rounded_background_lightgreen"/>


        <Button
            android:id="@+id/signupbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_out"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@+id/gender_text"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/poppins2"
            app:layout_constraintStart_toStartOf="parent"
            android:backgroundTint="@color/LightGreen"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
