<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/LightGreen"
    tools:context=".view.main.heightweight.InputHeightWeightDialogFragment">

    <TextView
        android:id="@+id/weightText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/weight"
        android:textSize="24sp"
        android:textColor="@color/white"
        android:fontFamily="@font/poppins2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputweightlayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@+id/weightText">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputweight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:background="@drawable/rounded_background_white"
            tools:ignore="SpeakableTextPresentCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/heightText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/height"
        android:textSize="24sp"
        android:textColor="@color/white"
        android:fontFamily="@font/poppins2"
        app:layout_constraintTop_toBottomOf="@id/inputweightlayout"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputheightlayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@+id/heightText">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputheight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:background="@drawable/rounded_background_white"
            tools:ignore="SpeakableTextPresentCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/ageText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/age"
        android:textSize="24sp"
        android:textColor="@color/white"
        android:fontFamily="@font/poppins2"
        app:layout_constraintTop_toBottomOf="@id/inputheightlayout"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputagelayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@+id/ageText">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:background="@drawable/rounded_background_white"
            tools:ignore="SpeakableTextPresentCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/genderText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/gender"
        android:textColor="@color/white"
        android:fontFamily="@font/poppins2"
        android:layout_marginTop="5dp"
        android:textSize="16sp"
        android:textStyle="bold"
        android:paddingLeft="30dp"
        app:layout_constraintTop_toBottomOf="@id/inputagelayout" />

    <RadioGroup
        android:id="@+id/radioGroupGender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="30dp"
        app:layout_constraintTop_toBottomOf="@id/genderText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radioButtonMen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/man"
            android:fontFamily="@font/poppins2"
            android:textColor="@color/white"
            android:textSize="16sp"/>

        <RadioButton
            android:id="@+id/radioButtonWoman"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/woman"
            android:fontFamily="@font/poppins2"
            android:textColor="@color/white"
            android:textSize="16sp"/>
    </RadioGroup>

    <TextView
        android:id="@+id/activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity"
        android:textSize="24sp"
        android:textColor="@color/white"
        android:fontFamily="@font/poppins2"
        app:layout_constraintTop_toBottomOf="@id/radioGroupGender"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="30dp"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewlight"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        app:cardElevation="0dp"
        app:cardBackgroundColor="@color/white"

        app:layout_constraintTop_toBottomOf="@id/activity"
        app:layout_constraintStart_toStartOf="parent"
        app:cardCornerRadius="15dp"
        app:layout_constraintEnd_toStartOf="@+id/cardViewmedium">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@id/light"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Light"
                android:textColor="@color/black"
                android:fontFamily="@font/poppins2"
                android:textStyle="bold"
                android:textSize="22sp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <ImageView
                android:id="@+id/img_light"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_light"
                app:layout_constraintTop_toBottomOf="@+id/light"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/desc_light"
                android:layout_width="wrap_content"
                android:layout_height="75dp"
                android:text="@string/Desc_light"
                android:textSize="10sp"
                android:textColor="@color/black"
                android:fontFamily="@font/poppins2"
                android:ems="9"
                android:textAlignment="center"
                app:layout_constraintTop_toBottomOf="@id/img_light"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewmedium"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:cardElevation="0dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="15dp"
        app:layout_constraintTop_toBottomOf="@id/activity"
        app:layout_constraintStart_toEndOf="@id/cardViewlight"
        app:layout_constraintEnd_toStartOf="@+id/cardViewheavy">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@id/medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Medium"
                android:textColor="@color/black"
                android:fontFamily="@font/poppins2"
                android:textStyle="bold"
                android:textSize="22sp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <ImageView
                android:id="@+id/img_medium"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_medium"
                app:layout_constraintTop_toBottomOf="@+id/medium"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/desc_medium"
                android:layout_width="wrap_content"
                android:layout_height="75dp"
                android:text="@string/desc_medium"
                android:textSize="10sp"
                android:textColor="@color/black"
                android:fontFamily="@font/poppins2"
                android:ems="9"
                android:textAlignment="center"
                app:layout_constraintTop_toBottomOf="@id/img_medium"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewheavy"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        app:cardElevation="0dp"
        app:cardCornerRadius="15dp"
        app:cardBackgroundColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/activity"
        app:layout_constraintStart_toEndOf="@id/cardViewmedium"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@id/heavy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/heavy"
                android:textColor="@color/black"
                android:fontFamily="@font/poppins2"
                android:textStyle="bold"
                android:textSize="22sp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <ImageView
                android:id="@+id/img_heavy"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_heavy"
                app:layout_constraintTop_toBottomOf="@+id/heavy"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/desc_heavy"
                android:layout_width="wrap_content"
                android:layout_height="75dp"
                android:ems="9"
                android:fontFamily="@font/poppins2"
                android:text="@string/desc_heavy"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="10sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/img_heavy" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/calculate"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:textSize="20sp"
        android:textColor="@color/LightGreen"
        android:fontFamily="@font/poppins2"
        android:textAlignment="center"
        android:background="@drawable/rounded_background_white"
        app:layout_constraintTop_toBottomOf="@+id/cardViewheavy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="30dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>